--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ pids
 
 # Optional eslint cache
 .eslintcache 
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local 
